--- a/spring-jpa-pizzeria/src/main/resources/templates/home.html
+++ b/spring-jpa-pizzeria/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div th:replace="components/navbar :: navbar" class="mt-10"></div>
-
+    <section th:replace="components/hero :: hero-section"></section>
 
 
     <script th:replace="components/utilities/bootstrapJS :: bootstrapJS"></script>
