--- a/spring-jpa-pizzeria/src/main/resources/templates/menu.html
+++ b/spring-jpa-pizzeria/src/main/resources/templates/menu.html
@@ -6,10 +6,8 @@
 </head>
 <body>
   <main>
-    <h1 class="underline text-3xl">Prova titolo</h1>
+    <h1 class="underline text-3xl">Menu</h1>
   </main>
 
   <script th:replace="components/utilities/tailwindCSS :: tailwindCSS"></script>
-<!--test -->
 </body>
-</html>
