add : styled menu-pizza section with db data

--- a/spring-jpa-pizzeria/src/main/resources/templates/components/hero.html
+++ b/spring-jpa-pizzeria/src/main/resources/templates/components/hero.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <!-- Hero Section Fragment -->
-<section th:fragment="hero-section" class="hero text-white py-20 my-5 bg-slate-900">
+<section th:fragment="hero-section" class="hero text-white py-20 mt-5 bg-slate-900">
     <div class="container mx-auto text-center">
         <h1 class="text-5xl font-bold mb-4">Benvenuti da Blue Pizza</h1>
         <p class="text-lg font-medium mb-6">La migliore pizza in città, ora anche con consegna a domicilio!</p>
