add : changed Integer in Long

--- a/spring-jpa-pizzeria/src/main/resources/templates/home.html
+++ b/spring-jpa-pizzeria/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org/" lang="en">
+<html xmlns:th="http://www.thymeleaf.org/" lang="it">
 <head>
     <meta charset="UTF-8" th:insert="~{components/utilities/bootstrapCSS :: bootstrapCSS}">
     <link th:replace="~{components/utilities/favicon :: favicon}">
@@ -15,6 +15,7 @@
             <div>
                 <h1 class="text-center font-bold text-3xl mb-[5.5rem]">Le nostre migliori pizze</h1>
                 <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+
                     <li th:each="pizza : ${pizza}" class="hover:scale-110 transition-all mb-8 md:mb-[5rem] lg:mb-[8rem]">
                         <h2 th:text="${pizza.name}" class="text-2xl font-bold text-center my-2"></h2>
                         <div class="flex flex-col justify-center items-center">
@@ -30,15 +31,18 @@
                             </div>
                         </div>
                     </li>
+
                 </ul>
             </div>
         </section>
-        <section class="px-3 mt-5 flex flex-col gap-5 justify-center items-center" th:unsless="${pizza.size()<0}">
+
+        <section class="px-3 mt-5 flex flex-col gap-5 justify-center items-center" th:unless="${pizza.size()>0}">
             <h1 class="text-center font-bold text-3xl max-w-[40rem]">Menu</h1>
             <h1 class="text-center font-bold text-2xl max-w-[40rem]">
                 Spiacente, abbiamo finito le pizze.. il tempo di infornare e torneranno qui!
             </h1>
         </section>
+
     </main>
     <script th:replace="~{components/utilities/bootstrapJS :: bootstrapJS}"></script>
     <script th:replace="~{components/utilities/tailwindCSS :: tailwindCSS}"></script>
