--- a/spring-jpa-pizzeria/src/main/resources/templates/components/hero.html
+++ b/spring-jpa-pizzeria/src/main/resources/templates/components/hero.html
@@ -11,8 +11,8 @@
         <h1 class="text-5xl font-bold mb-4">Benvenuti da Blue Pizza</h1>
         <p class="text-lg font-medium mb-6">La migliore pizza in città, ora anche con consegna a domicilio!</p>
         <div class="flex justify-center space-x-4">
-            <a href="/ordina" class="bg-sky-600 hover:text-slate-950 hover:bg-sky-300 text-white font-semibold py-3 px-6 rounded-lg">Ordina Online</a>
-            <a href="/menu" class="bg-gray-500 hover:bg-gray-600 text-white font-semibold py-3 px-6 rounded-lg">Scopri il Menu</a>
+            <a href="#" class="bg-sky-600 hover:text-slate-950 hover:bg-sky-300 text-white font-semibold py-3 px-6 rounded-lg">Ordina Online</a>
+            <a href="#" class="bg-gray-500 hover:bg-gray-600 text-white font-semibold py-3 px-6 rounded-lg">Scopri il Menu</a>
         </div>
     </div>
 </section>
