--- a/spring-jpa-pizzeria/src/main/resources/templates/index.html
+++ b/spring-jpa-pizzeria/src/main/resources/templates/index.html
@@ -14,29 +14,43 @@
     <section class="menu-pizza px-3 mt-5" th:if="${pizzas.size()>0}">
         <div>
             <h1 class="text-center font-bold text-3xl mb-[5.5rem]">Le nostre migliori pizze</h1>
-            <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3">
-                    <li th:each="pizzas : ${pizzas}" class="hover:scale-110 transition-all mb-8 md:mb-[5rem] lg:mb-[8rem]">
-
-                        <!-- NAME + FOTO + DESCRIPTION-->
-                        <h2 th:text="${pizzas.name}" class="text-2xl font-bold text-center my-2"></h2>
-                        <div class="flex flex-col justify-center items-center">
-                            <a th:href="@{ordina/{id}(id=${pizzas.id})}">
-                                <img th:src="${pizzas.foto}" alt="foto-pizza" class="max-w-xs rounded-md">
-                            </a>
-                            <p th:text="${pizzas.description}" class="text-center text-lg mt-3 max-w-[15rem]"></p>
-
-                            <!--PRICE + ORDER BUTTON-->
-                            <div class="flex flex-row justify-between items-center gap-3 mt-3">
-                                <p th:text="${pizzas.price}" class="font-bold text-xl"></p>
-                                <a th:href="@{ordina/{id}(id=${pizzas.id})}">
-                                    <button type="button"
-                                            class="px-3 py-2 font-semibold rounded-md bg-sky-600 hover:bg-sky-800 text-white transition-all">
-                                        Ordina
-                                    </button>
-                                </a>
-                            </div>
+            <!-- Form di Ricerca -->
+            <section class="search-pizza px-3 mt-5">
+                <div class="flex justify-center mb-5">
+                    <form th:action="@{/search}" method="get" class="w-full max-w-sm">
+                        <div class="flex items-center border-b border-b-2 border-sky-600 py-2">
+                            <input name="name" class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none" type="text" placeholder="Cerca la tua pizza" aria-label="Pizza name">
+                            <button class="flex-shrink-0 bg-sky-600 hover:bg-sky-700 border-sky-600 hover:border-sky-700 text-sm border-4 text-white py-1 px-2 rounded" type="submit">
+                                Cerca
+                            </button>
                         </div>
-                    </li>
+                    </form>
+                </div>
+            </section>
+
+            <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3">
+                <li th:each="pizzas : ${pizzas}" class="hover:scale-110 transition-all mb-8 md:mb-[5rem] lg:mb-[8rem]">
+
+                    <!-- NAME + FOTO + DESCRIPTION-->
+                    <h2 th:text="${pizzas.name}" class="text-2xl font-bold text-center my-2"></h2>
+                    <div class="flex flex-col justify-center items-center">
+                        <a th:href="@{ordina/{id}(id=${pizzas.id})}">
+                            <img th:src="${pizzas.foto}" alt="foto-pizza" class="max-w-xs rounded-md">
+                        </a>
+                        <p th:text="${pizzas.description}" class="text-center text-lg mt-3 max-w-[15rem]"></p>
+
+                        <!--PRICE + ORDER BUTTON-->
+                        <div class="flex flex-row justify-between items-center gap-3 mt-3">
+                            <p th:text="${pizzas.price}" class="font-bold text-xl"></p>
+                            <a th:href="@{ordina/{id}(id=${pizzas.id})}">
+                                <button type="button"
+                                        class="px-3 py-2 font-semibold rounded-md bg-sky-600 hover:bg-sky-800 text-white transition-all">
+                                    Ordina
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                </li>
             </ul>
         </div>
     </section>
