--- a/spring-jpa-pizzeria/src/main/resources/templates/index.html
+++ b/spring-jpa-pizzeria/src/main/resources/templates/index.html
@@ -14,8 +14,8 @@
     <section class="menu-pizza px-3 mt-5" th:if="${pizzas.size()>0}">
         <div>
             <h1 class="text-center font-bold text-3xl mb-[5.5rem]">Le nostre migliori pizze</h1>
-            <!-- Form di Ricerca -->
-            <section class="search-pizza px-3 mt-5">
+            <!-- SEARCH FORM -->
+            <section class="search-pizza px-3 mt-5 flex flex-column items-center justify-center">
                 <div class="flex justify-center mb-5">
                     <form th:action="@{/search}" method="get" class="w-full max-w-sm">
                         <div class="flex items-center border-b border-b-2 border-sky-600 py-2">
@@ -26,40 +26,61 @@
                         </div>
                     </form>
                 </div>
+                <div class="flex items-center justify-center flex-column gap-4 mb-20">
+                    <h1>Oppure</h1>
+                    <a th:href="@{/create}">
+                        <button type="button" class="px-3 py-2 rounded-md bg-sky-600 text-white hover:bg-sky-400 transition-all">
+                            Crea la tua pizza!
+                        </button>
+                    </a>
+                </div>
             </section>
 
-            <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3">
-                <li th:each="pizzas : ${pizzas}" class="hover:scale-110 transition-all mb-8 md:mb-[5rem] lg:mb-[8rem]">
-
-                    <!-- NAME + FOTO + DESCRIPTION-->
-                    <h2 th:text="${pizzas.name}" class="text-2xl font-bold text-center my-2"></h2>
-                    <div class="flex flex-col justify-center items-center">
-                        <a th:href="@{ordina/{id}(id=${pizzas.id})}">
-                            <img th:src="${pizzas.foto}" alt="foto-pizza" class="max-w-xs rounded-md">
-                        </a>
-                        <p th:text="${pizzas.description}" class="text-center text-lg mt-3 max-w-[15rem]"></p>
-
-                        <!--PRICE + ORDER BUTTON-->
-                        <div class="flex flex-row justify-between items-center gap-3 mt-3">
-                            <p th:text="${pizzas.price}" class="font-bold text-xl"></p>
-                            <a th:href="@{ordina/{id}(id=${pizzas.id})}">
-                                <button type="button"
-                                        class="px-3 py-2 font-semibold rounded-md bg-sky-600 hover:bg-sky-800 text-white transition-all">
-                                    Ordina
-                                </button>
+            <!-- Pizza Cards -->
+            <div class="container px-4 mx-auto">
+                <div class="row">
+                    <div th:each="pizza : ${pizzas}" class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+                        <div class="card hover:scale-110 transition-transform duration-200 ease-in-out">
+                            <a th:href="@{ordina/{id}(id=${pizza.id})}">
+                                <img th:src="${pizza.foto}" alt="Foto pizza" class="card-img-top rounded-t-md">
                             </a>
+                            <div class="card-body text-center p-4">
+                                <h3 th:text="${pizza.name}" class="font-bold text-2xl mb-3"></h3>
+                                <p class="card-text" th:text="${pizza.description}"></p>
+                                <p class="card-text font-bold text-sky-600 text-lg mt-3" th:text="${pizza.price}"></p>
+                                <a href="#">
+                                    <button type="button" class="py-2 px-3 rounded-md mt-3 bg-sky-600 text-white hover:bg-sky-500 transition-colors">
+                                        Ordina ora
+                                    </button>
+                                </a>
+                            </div>
                         </div>
                     </div>
-                </li>
-            </ul>
+                </div>
+            </div>
+
         </div>
     </section>
 
     <section class="px-3 mt-5 flex flex-col gap-5 justify-center items-center" th:unless="${pizzas.size()>0}">
         <h1 class="text-center font-bold text-3xl max-w-[40rem]">Menu</h1>
         <h1 class="text-center font-bold text-2xl max-w-[40rem]">
-            Spiacente, abbiamo finito le pizze.. il tempo di infornare e torneranno qui!
+            Non hai trovato la pizza che cercavi? Scegli altro o creane una tua!
         </h1>
+
+        <!-- SEARCH FORM -->
+        <section class="search-pizza px-3 mt-5 flex flex-column items-center justify-center">
+            <div class="flex justify-center mb-5">
+                <form th:action="@{/search}" method="get" class="w-full max-w-sm">
+                    <div class="flex items-center border-b border-b-2 border-sky-600 py-2">
+                        <input name="name" class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none" type="text" placeholder="Cerca la tua pizza" aria-label="Pizza name">
+                        <button class="flex-shrink-0 bg-sky-600 hover:bg-sky-700 border-sky-600 hover:border-sky-700 text-sm border-4 text-white py-1 px-2 rounded" type="submit">
+                            Cerca
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </section>
     </section>
 
 </main>
