--- a/spring-jpa-pizzeria/src/main/resources/templates/pizza/edit.html
+++ b/spring-jpa-pizzeria/src/main/resources/templates/pizza/edit.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org/" lang="it">
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <th:block th:replace="components/bootstrap :: bootstrap"></th:block>
 </head>
 <body>
-
+  <h1>Edit</h1>
 </body>
 </html>
