--- a/spring-jpa-pizzeria/src/main/resources/templates/components/bootstrap.html
+++ b/spring-jpa-pizzeria/src/main/resources/templates/components/bootstrap.html
@@ -5,7 +5,8 @@
     <title>Title</title>
     <th:block th:fragment="bootstrap">
         <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
-        <script th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.min.bundle.js}"></script>
+        <script th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js}"></script>
+        <script src="https://cdn.tailwindcss.com"></script>
     </th:block>
 </head>
 <body>
