--- a/spring-jpa-pizzeria/src/main/resources/templates/pizza/edit.html
+++ b/spring-jpa-pizzeria/src/main/resources/templates/pizza/edit.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org/" lang="it">
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-  <th:block th:replace="components/bootstrap :: bootstrap"></th:block>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <th:block th:replace="components/bootstrap :: bootstrap"></th:block>
 </head>
 <body>
-  <h1>Edit</h1>
+<section class="container my-5 w-25">
+    <form th:object="${pizza}" th:method="POST" th:action="@{/edit/{id}(id=${pizza.id})}">
+        <div class="mb-3">
+            <label for="name" class="form-label">Nome Pizza</label>
+            <input type="text" class="form-control" id="name" th:field="*{name}">
+        </div>
+        <div class="mb-3">
+            <label for="ingredients" class="form-label">Ingredienti</label>
+            <input type="text" class="form-control" id="ingredients" th:field="*{ingredients}">
+        </div>
+        <div class="mb-3">
+            <label for="price" class="form-label">Prezzo</label>
+            <input type="number" class="form-control" id="price" th:field="*{price}">
+        </div>
+        <div class="d-flex justify-content-between align-items-center">
+            <button type="submit" class="btn btn-success">Modifica</button>
+            <button type="reset" class="btn btn-warning">Ripristina campi</button>
+        </div>
+    </form>
+</section>
 </body>
 </html>
