--- a/spring-jpa-pizzeria/src/main/resources/templates/pizza/show.html
+++ b/spring-jpa-pizzeria/src/main/resources/templates/pizza/show.html
@@ -1,11 +1,79 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org/" lang="it">
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-  <th:block th:replace="components/bootstrap :: bootstrap"></th:block>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <th:block th:replace="components/bootstrap :: bootstrap"></th:block>
 </head>
 <body>
-  <h1>Show</h1>
+<section class="table-section container my-5">
+    <!-- TABLE -->
+    <table class="table text-center">
+        <thead>
+        <tr>
+            <th scope="col">Nome</th>
+            <th scope="col" class="w-25">Foto</th>
+            <th scope="col" class="w-25">Ingredienti</th>
+            <th scope="col">Prezzo</th>
+            <th scope="col" class="w-25">Creato il</th>
+            <th scope="col" class="w-25">Modificato il</th>
+            <th scope="col">Azioni</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td th:text="${pizza.name}" class="font-bold w-16"></td>
+            <td class="d-flex flex-column justify-content-center align-items-center">
+                <img th:src="${pizza.foto}" alt="foto-pizza" class="w-75 h-75">
+            </td>
+            <td th:text="${pizza.ingredients}"></td>
+            <td th:text="${pizza.price}"></td>
+            <td th:text="${pizza.createdAt}"></td>
+            <td th:text="${pizza.updatedAt}"></td>
+            <td>
+                <!-- BUTTON GROUP-->
+                <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+                    <a th:href="@{/edit/{id}(id=${pizza.id})}">
+                        <button type="button" class="btn btn-warning">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10"/>
+                            </svg>
+                        </button>
+                    </a>
+                    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete-modal">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="black" class="w-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0"/>
+                        </svg>
+                    </button>
+                </div>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</section>
+<!-- MODAL -->
+<section class="modal-container">
+    <div class="modal fade" id="delete-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Vuoi eliminare questa pizza?</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Non sarà possibie accedere alle risorse cancellate, sei sicuro?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Annulla</button>
+                    <form th:method="POST">
+                        <button type="submit" class="btn btn-danger">Elimina</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
