bug : update() method doesnt work, if anything wrong i got 'Property or field 'id' cannot be found on null'

--- a/spring-jpa-pizzeria/src/main/resources/templates/pizza/edit.html
+++ b/spring-jpa-pizzeria/src/main/resources/templates/pizza/edit.html
@@ -7,18 +7,36 @@
 </head>
 <body>
 <section class="container my-5 w-25">
-    <form th:object="${pizza}" th:method="POST" th:action="@{/edit/{id}(id=${pizza.id})}">
+    <form th:object="${pizza}" method="POST" th:action="@{/edit/{id}(id=${pizza.id})}">
         <div class="mb-3">
             <label for="name" class="form-label">Nome Pizza</label>
-            <input type="text" class="form-control" id="name" th:field="*{name}">
+            <input type="text" class="form-control" id="name" th:field="*{name}" th:errorclass="is-invalid">
+            <!-- validation feedback -->
+            <div th:if="${#fields.hasErrors('name')}" class="invalid-feedback">
+                <ul>
+                    <li th:each="err : ${#fields.errors('name')}" th:text="${err}"></li>
+                </ul>
+            </div>
         </div>
         <div class="mb-3">
             <label for="ingredients" class="form-label">Ingredienti</label>
-            <input type="text" class="form-control" id="ingredients" th:field="*{ingredients}">
+            <input type="text" class="form-control" id="ingredients" th:field="*{ingredients}" th:errorclass="is-invalid">
+            <!-- validation feedback -->
+            <div th:if="${#fields.hasErrors('ingredients')}" class="invalid-feedback">
+                <ul>
+                    <li th:each="err : ${#fields.errors('ingredients')}" th:text="${err}"></li>
+                </ul>
+            </div>
         </div>
         <div class="mb-3">
             <label for="price" class="form-label">Prezzo</label>
-            <input type="number" class="form-control" id="price" th:field="*{price}">
+            <input type="number" class="form-control" id="price" th:field="*{price}" th:errorclass="is-invalid">
+            <!-- validation feedback -->
+            <div th:if="${#fields.hasErrors('price')}" class="invalid-feedback">
+                <ul>
+                    <li th:each="err : ${#fields.errors('price')}" th:text="${err}"></li>
+                </ul>
+            </div>
         </div>
         <div class="d-flex justify-content-between align-items-center">
             <button type="submit" class="btn btn-success">Modifica</button>
