--- a/spring-jpa-pizzeria/src/main/resources/templates/pizza/edit.html
+++ b/spring-jpa-pizzeria/src/main/resources/templates/pizza/edit.html
@@ -7,7 +7,10 @@
 </head>
 <body>
 <section class="container my-5 w-25">
-    <form th:object="${pizza}" method="POST" th:action="@{/edit/{id}(id=${pizza.id})}">
+    <div class="d-flex justify-content-center align-items-center my-5">
+        <h1 class="text-2xl">Stai modificando <strong>'[[ ${pizza.name} ]]'</strong></h1>
+    </div>
+    <form th:object="${pizza}" th:method="POST" th:action="@{/edit/{id}(id=${pizza.id})}">
         <div class="mb-3">
             <label for="name" class="form-label">Nome Pizza</label>
             <input type="text" class="form-control" id="name" th:field="*{name}" th:errorclass="is-invalid">
@@ -39,8 +42,8 @@
             </div>
         </div>
         <div class="d-flex justify-content-between align-items-center">
-            <button type="submit" class="btn btn-success">Modifica</button>
-            <button type="reset" class="btn btn-warning">Ripristina campi</button>
+            <button type="submit" class="btn btn-success">Conferma</button>
+            <button type="reset" class="btn btn-warning">Ripristina originale</button>
         </div>
     </form>
 </section>
