fix:fragments syntax

--- a/spring-jpa-pizzeria/src/main/resources/templates/pizza/show.html
+++ b/spring-jpa-pizzeria/src/main/resources/templates/pizza/show.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <th:block th:replace="components/bootstrap :: bootstrap"></th:block>
+    <th:block th:replace="~{components/bootstrap :: bootstrap}"></th:block>
 </head>
 <body>
 <section class="table-section container my-5">
