--- a/spring-jpa-pizzeria/src/main/resources/templates/pizza/index.html
+++ b/spring-jpa-pizzeria/src/main/resources/templates/pizza/index.html
@@ -20,7 +20,15 @@
             <th:block th:if="${alertMessage}">
                 <div th:replace="fragments/alertMessage :: alertMessage(${alertMessage})"></div>
             </th:block>
-            <div class="d-flex justify-content-end align-items-center mt-5">
+            <th:block th:if="${successMessage}">
+                <div th:replace="fragments/successMessage :: successMessage(${successMessage})"></div>
+            </th:block>
+            <div class="d-flex flex-row justify-content-end align-items-center gap-3 my-5">
+                <a th:href="@{/offers}">
+                    <button type="button" class="btn btn-primary">
+                        Vedi Offerte
+                    </button>
+                </a>
                 <a th:href="@{/create}">
                     <button type="button" class="btn btn-success">
                         + Crea
@@ -53,6 +61,7 @@
                     <td>
                         <!-- BUTTON GROUP-->
                         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+                            <!-- SHOW BUTTON -->
                             <a th:href="@{/show/{id}(id=${pizza.id})}">
                                 <button type="button" class="btn btn-primary">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="w-6">
@@ -61,6 +70,7 @@
                                     </svg>
                                 </button>
                             </a>
+                            <!-- EDIT BUTTON -->
                             <a th:href="@{/edit/{id}(id=${pizza.id})}">
                                 <button type="button" class="btn btn-warning">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6">
@@ -68,6 +78,15 @@
                                     </svg>
                                 </button>
                             </a>
+                            <!-- OFFER BUTTON -->
+                            <a th:href="@{/{id}/offer(id=${pizza.id})}">
+                                <button type="button" class="btn btn-success">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="#000000" viewBox="0 0 240 240" stroke-width="1.5" stroke="#000000" class="w-6">
+                                        <path d="M225.86,102.82c-3.77-3.94-7.67-8-9.14-11.57-1.36-3.27-1.44-8.69-1.52-13.94-.15-9.76-.31-20.82-8-28.51s-18.75-7.85-28.51-8c-5.25-.08-10.67-.16-13.94-1.52-3.56-1.47-7.63-5.37-11.57-9.14C146.28,23.51,138.44,16,128,16s-18.27,7.51-25.18,14.14c-3.94,3.77-8,7.67-11.57,9.14C88,40.64,82.56,40.72,77.31,40.8c-9.76.15-20.82.31-28.51,8S41,67.55,40.8,77.31c-.08,5.25-.16,10.67-1.52,13.94-1.47,3.56-5.37,7.63-9.14,11.57C23.51,109.73,16,117.56,16,128s7.51,18.27,14.14,25.18c3.77,3.94,7.67,8,9.14,11.57,1.36,3.27,1.44,8.69,1.52,13.94.15,9.76.31,20.82,8,28.51s18.75,7.85,28.51,8c5.25.08,10.67.16,13.94,1.52,3.56,1.47,7.63,5.37,11.57,9.14C109.72,232.49,117.56,240,128,240s18.27-7.51,25.18-14.14c3.94-3.77,8-7.67,11.57-9.14,3.27-1.36,8.69-1.44,13.94-1.52,9.76-.15,20.82-.31,28.51-8s7.85-18.75,8-28.51c.08-5.25.16-10.67,1.52-13.94,1.47-3.56,5.37-7.63,9.14-11.57C232.49,146.27,240,138.44,240,128S232.49,109.73,225.86,102.82Zm-11.55,39.29c-4.79,5-9.75,10.17-12.38,16.52-2.52,6.1-2.63,13.07-2.73,19.82-.1,7-.21,14.33-3.32,17.43s-10.39,3.22-17.43,3.32c-6.75.1-13.72.21-19.82,2.73-6.35,2.63-11.52,7.59-16.52,12.38S132,224,128,224s-9.15-4.92-14.11-9.69-10.17-9.75-16.52-12.38c-6.1-2.52-13.07-2.63-19.82-2.73-7-.1-14.33-.21-17.43-3.32s-3.22-10.39-3.32-17.43c-.1-6.75-.21-13.72-2.73-19.82-2.63-6.35-7.59-11.52-12.38-16.52S32,132,32,128s4.92-9.14,9.69-14.11,9.75-10.17,12.38-16.52c2.52-6.1,2.63-13.07,2.73-19.82.1-7,.21-14.33,3.32-17.43S70.51,56.9,77.55,56.8c6.75-.1,13.72-.21,19.82-2.73,6.35-2.63,11.52-7.59,16.52-12.38S124,32,128,32s9.15,4.92,14.11,9.69,10.17,9.75,16.52,12.38c6.1,2.52,13.07,2.63,19.82,2.73,7,.1,14.33.21,17.43,3.32s3.22,10.39,3.32,17.43c.1,6.75.21,13.72,2.73,19.82,2.63,6.35,7.59,11.52,12.38,16.52S224,124,224,128,219.08,137.14,214.31,142.11ZM120,96a24,24,0,1,0-24,24A24,24,0,0,0,120,96ZM88,96a8,8,0,1,1,8,8A8,8,0,0,1,88,96Zm72,40a24,24,0,1,0,24,24A24,24,0,0,0,160,136Zm0,32a8,8,0,1,1,8-8A8,8,0,0,1,160,168Zm13.66-74.34-80,80a8,8,0,0,1-11.32-11.32l80-80a8,8,0,0,1,11.32,11.32Z"></path>
+                                    </svg>
+                                </button>
+                            </a>
+                            <!-- DELETE BUTTON -->
                             <button type="button" class="btn btn-danger" data-bs-toggle="modal" th:data-bs-target="'#delete-modal'+ ${pizza.id}">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" class="w-6">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0"/>
