--- a/spring-jpa-pizzeria/src/main/resources/templates/fragments/alertMessage.html
+++ b/spring-jpa-pizzeria/src/main/resources/templates/fragments/alertMessage.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <div class="alert alert-warning alert-dismissible fade show" role="alert" th:fragment="alertMessage(message)">
+    <div class="alert alert-danger alert-dismissible fade show" role="alert" th:fragment="alertMessage(message)">
         <span th:text="${message}"></span>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="close"></button>
     </div>
